se aceptan clos cambio en html

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
 <title>--CONDICADOR Y DECODIFICADOR--</title>
 <meta charset="utf-8" />
-<script src="JavaScript1.js"></script>
+<script src="codificador.js"></script>
 </head>
 
 <body>
